--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,193 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+body,
+html {
+  height: 100%;
+  margin-top: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: #f0f0f0;
+}
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
+.hidden {
+  display: none;
+}
+
+.input {
+  border-radius: 4px;
+  width: 272px;
+  height: 40px;
+  border: 1px solid #808080;
   font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #808080;
+  box-sizing: border-box;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  margin-bottom: 32px;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+.input:hover {
+  border-color: #000;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.input:active {
+  border-color: #4e75ff;
+  color: #2e2f42;
+}
+
+.btn {
+  box-sizing: content-box;
+  border: none;
+  cursor: pointer;
+  border-radius: 8px;
+  padding: 0 16px;
+  width: 91px;
+  height: 40px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background: #4e75ff;
+  margin-left: 8px;
+}
+
+.btn:hover {
+  background: #6c8cff;
+}
+
+.loader {
+  position: relative;
+  width: 64px;
+  height: 64px;
+  background-color: rgba(0, 0, 0, 0.5);
+  transform: rotate(45deg);
+  overflow: hidden;
+}
+
+.loader:after {
+  content: '';
+  position: absolute;
+  inset: 8px;
+  margin: auto;
+  background: #222b32;
+}
+
+.loader:before {
+  content: '';
+  position: absolute;
+  inset: -15px;
+  margin: auto;
+  background: #de3500;
+  animation: diamondLoader 2s linear infinite;
+}
+
+@keyframes diamondLoader {
+
+  0%,
+  10% {
+    transform: translate(-64px, -64px) rotate(-45deg)
+  }
+
+  90%,
+  100% {
+    transform: translate(0px, 0px) rotate(-45deg)
+  }
+}
+
+/* .loader {
+  position: relative;
+  margin: auto;
+  box-sizing: border-box;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  border: 4px solid rgba(255, 255, 255, 0.1);
+  transform-origin: 50% 50%;
+  transform: perspective(200px) rotateX(66deg);
+  animation: spinner-wiggle 1.2s infinite;
+}
+
+.loader:before,
+.loader:after {
+  content: "";
+  position: absolute;
+  inset: -4px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  border: 4px solid #0000;
+  animation: spinner-spin 1.2s cubic-bezier(0.6, 0.2, 0, 0.8) infinite,
+    spinner-fade 1.2s linear infinite;
+}
+
+.loader:before {
+  border-top-color: #fff;
+}
+
+.loader:after {
+  border-top-color: #ff3d00;
+  animation-delay: 0.4s;
+}
+
+@keyframes spinner-spin {
+  100% {
+    transform: rotate(360deg)
+  }
+}
+
+@keyframes spinner-fade {
+
+  25%,
+  75% {
+    opacity: 0.1
+  }
+
+  50% {
+    opacity: 1
+  }
+} */
+
+.loader.hidden {
+  display: none;
+}
+
+.gallery-css {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 24px;
+  width: calc((100% - 48px) / 2);
+  /* border: 1px solid #808080; */
+}
+
+.info-wrap {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  justify-content: space-evenly;
+}
+
+.info-item-css {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33333;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  text-decoration: none;
+  white-space: pre-line;
+}
+
+/* .wrap-css {
+  display: flex;
+  flex-direction: row;
+  width: calc((100% - 48px) / 3);
+} */
+
+.form-gallery {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
